--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "rimraf dist && tsc",
     "start": "node ./src/index.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
@@ -15,6 +16,7 @@
     "bull": "^4.10.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "rimraf": "^3.0.2",
     "ytdl-core": "^4.11.2"
   },
   "devDependencies": {
